[gd_scene load_steps=2 format=3 uid="uid://begpemdaokcnx"]

[ext_resource type="Script" path="res://addons/skilltreeeditor/skill_node/skill_middle_node.gd" id="1_lqa4k"]

[node name="SkillMiddleNode" type="GraphNode"]
anchors_preset = -1
anchor_right = 0.455
anchor_bottom = 0.707
offset_right = -0.160034
offset_bottom = -0.136017
resizable = true
title = "Middle Skill"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_lqa4k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Skill:"

[node name="SkillIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SkillName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Melee"

[node name="SelectSkillButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Select Skill"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="LoadSkillDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres; Skills")

[node name="RequirementsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="RequirementsLabel" type="Label" parent="RequirementsContainer"]
layout_mode = 2
text = "Requirements:"

[node name="AddReqButton" type="Button" parent="RequirementsContainer"]
layout_mode = 2
text = "Add Req"

[node name="RemoveReqButton" type="Button" parent="RequirementsContainer"]
layout_mode = 2
text = "Remove Req"

[node name="UnlockContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="UnlocksLabel" type="Label" parent="UnlockContainer"]
layout_mode = 2
text = "Unlocks:"

[node name="AddUnlockButton" type="Button" parent="UnlockContainer"]
layout_mode = 2
text = "Add Unlock"

[node name="RemoveUnlockButton" type="Button" parent="UnlockContainer"]
layout_mode = 2
text = "Remove Req"

[connection signal="pressed" from="HBoxContainer/SelectSkillButton" to="." method="_on_select_skill_button_pressed"]
[connection signal="file_selected" from="LoadSkillDialog" to="." method="_on_load_skill_dialog_file_selected"]
[connection signal="pressed" from="RequirementsContainer/AddReqButton" to="." method="_on_add_requirement_button_pressed"]
[connection signal="pressed" from="RequirementsContainer/RemoveReqButton" to="." method="_on_remove_requirement_button_pressed"]
[connection signal="pressed" from="UnlockContainer/AddUnlockButton" to="." method="_on_add_unlock_button_pressed"]
[connection signal="pressed" from="UnlockContainer/RemoveUnlockButton" to="." method="_on_remove_unlock_button_pressed"]
